sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  
	var n = getNombreValeurs()
  
  for (i <- 1 to n-2) {
    
    echange(i,rechMin(i))
    
  }

}


def rechMin(N: Int): Int = {
  
	var i = 0
  var indMin = N
  
  while (i <= getValeursNombre()-N-1) {
    
    if (getValeur(i) <= getValeur(i+1)) {
      
      indMin = i
      
    }
    
    else {
      
      indMin = i+1
      
    }
    
  }
  
  return indMin
  
}